site/theme-custom.css
@import url("styles/themes/theme-suzi.min.css");
.factory-flag{ visibility: hidden; }


/* About Me section */
.profile-picture {
    width: 40%;
    margin-left: auto;
    margin-right: auto;
    position: center;
    clip-path: circle(45% at center);
}



.square {
    position: relative;

}

.square:after {
    content: "";
    display: block;
    padding-bottom: 100%;
}

.content {
    position: absolute;
    width: 100%;
    height: 100%;
}



.overflow-width-50 {
    margin-left: -50%;
    margin-right: -50%;
}

.parallax-element {
    height: 100vh; 
    top: 0px; 
    margin-bottom: 0px; 
    position: absolute;
    pointer-events: none;
}

.align-left {
    margin-left: 0px; 
    left: 0px; 
    text-align: left;
}

.align-centre {
    margin-left: auto; 
    left: auto; 
    text-align: center;
}

.skills-header {
    text-transform: uppercase;
    font-weight: 600;
    color: #ffffff;
}

.platform-button {
    width: auto;
    max-width: 50%;
    margin-bottom: 20px;
}

.hover-overlay:hover img {
    transform: scale(1.25,1.25) rotate(-5deg);
    -webkit-transform: scale(1.25,1.25) rotate(-5deg);
    -moz-transform: scale(1.25,1.25) rotate(-5deg);
    -ms-transform: scale(1.25,1.25) rotate(-5deg);
    -o-transform: scale(1.25,1.25) rotate(-5deg);
}

